JumpScript/tests/baselines/reference/downlevelLetConst6.errors.txt
tests/cases/compiler/downlevelLetConst6.jump(1,1): error TS2304: Cannot find name 'let'.


==== tests/cases/compiler/downlevelLetConst6.jump (1 errors) ====
    let
    ~~~
!!! error TS2304: Cannot find name 'let'.